apps/frontend/src/features/event/ui/components/EventCarousel/EventCarousel.module.css
.container {
    position: relative;
    
    height: 17.5rem;
    width: 100%;

    overflow: hidden;
}

.navigationButton {
    position: absolute;
    inset: 0 auto 0 auto;

    width: 5rem;

    border: none;
    background: none;

    z-index: 2;

    opacity: 0;
    
    transition: all 0.3s ease-in-out;

    &:hover, &:focus {
        opacity: 1;
    }
    
    &::after {
        content: '';
        position: absolute;
        inset: 0;
        z-index: 1;
        pointer-events: none;
    }

    & > svg {
        position: relative;
        z-index: 3;
    }

    &.leftButton {
        left: 0;

        &::after {
            background: linear-gradient(to right, hsl(from var(--accent) h s l / 0.5), 80%, transparent);
        }
    }

    &.rightButton {
        right: 0;

         &::after {
            background: linear-gradient(to left, hsl(from var(--accent) h s l / 0.5), 80%, transparent);
        }
    }
}

.carousel {
    --horizontal-padding: 2rem;

    padding: 0 var(--horizontal-padding);
    scroll-padding-inline-start: var(--horizontal-padding);

    display: grid;
    grid-auto-flow: column;
    gap: 1.5rem;

    overflow-x: scroll;
    scroll-snap-type: x mandatory;

    &::-webkit-scrollbar {
        display: none;
    }
}

.card {
    display: grid;
    grid-template-rows: 1fr auto;
    
    height: 100%;
    width: 22.5rem;

    background-color: #C0D8D8;

    border-radius: 1rem;
    overflow: hidden;

    scroll-snap-align: start;
}

.cardContent {
    --card-info-opacity: 0;
    --card-info-text-offset: 0.5rem;
    
    display: grid;
    width: 100%;
    height: 100%;
    overflow: hidden;

    &:hover {
        --card-info-opacity: 1;
        --card-info-text-offset: 0;
    }

    & > img {
        grid-row: 1/-1;
        grid-column: 1/-1;
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    & > .cardInfo {
        display: grid;
        
        opacity: var(--card-info-opacity);
        
        grid-row: 1/-1;
        grid-column: 1/-1;

        text-align: center;
        place-content: center;

        user-select: none;
        color: #FDFCEE;
        background-color: rgba(0, 0, 0, 0.8);

        transition: opacity 0.3s ease-in-out;

        & > p {
            opacity: var(--card-info-opacity);
            transform: translateY(var(--card-info-text-offset));
            transition: all 0.3s ease-in-out;
        }
    }
}

.cardFooter {
    display: grid;
    place-items: center;
    padding: 1.5rem 1rem;

    font-weight: 600;
    color: #3A3232;
}

